# formatv

./: CMakeLists.txt  README.md  main.cpp
src/: Format.h  FormatAlign.h  FormatUtil.h  FormatVariadic.h  FormatVariadicDetails.h
